<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.ontbrowser</groupId>
  <artifactId>ontology-browser</artifactId>
  <version>4.0.0</version>
  <name>Ontology Browser</name>
  <url>https://github.com/nickdrummond/ontology-browser</url>

  <properties>
    <java.version>1.17</java.version>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <owlapi.version>5.1.20</owlapi.version>
    <jfact.version>5.0.3</jfact.version>
    <gaphu.version>0.0.9</gaphu.version>
    <mockito.version>4.9.0</mockito.version>

  </properties>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.4</version>
  </parent>

  <repositories>
    <repository>
      <id>project.local</id>
      <name>project</name>
      <url>file:${project.basedir}/repo</url>
    </repository>
  </repositories>

  <dependencies>

    <!-- Spring dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-xml</artifactId>
      <version>2.17.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.1</version>
    </dependency>

    <dependency>
      <groupId>uk.co.nickdrummond</groupId>
      <artifactId>gaphu</artifactId>
      <version>${gaphu.version}</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-apibinding</artifactId>
      <version>${owlapi.version}</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-impl</artifactId>
      <version>${owlapi.version}</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-parsers</artifactId>
      <version>${owlapi.version}</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>jfact</artifactId>
      <version>${jfact.version}</version>
      <exclusions>
        <exclusion>
          <groupId>net.sourceforge.owlapi</groupId>
          <artifactId>owlapi-distribution</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.github.galigator.openllet</groupId>
      <artifactId>openllet-owlapi</artifactId>
      <version>2.6.5</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-tdb2</artifactId>
      <version>3.8.0</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.4.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <!-- https://central.sonatype.dev/artifact/org.eclipse.jgit/org.eclipse.jgit/ -->
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit</artifactId>
      <version>6.8.0.202311291450-r</version>
    </dependency>
    <dependency>
      <!-- SSH support for JGit based on Apache MINA sshd -->
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit.ssh.apache</artifactId>
      <version>6.8.0.202311291450-r</version>
    </dependency>
    <dependency>
    <!-- GPG support for JGit based on BouncyCastle (commit signing) -->
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit.gpg.bc</artifactId>
      <version>6.8.0.202311291450-r</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-core</artifactId>
      <version>9.9.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-analyzers-common</artifactId>
      <version>8.11.2</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <image>
            <name>nickdrummond/ontology-browser</name>
          </image>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
